# chmigrate

./: .gitignore  README.md  pyproject.toml
.github/actions/prepare-workspace/: action.yml
.github/workflows/: build.yml  publish.yml  python-publish.yml  release.yml  test-pypi-publish.yml  test-python-publish.yml  test.yml
clickhouse_migrate/: migrate.py  runner.py  utils.py
tests/: conftest.py  test_chmigrate.py
